--- a/style.css
+++ b/style.css
@@ -700,7 +700,7 @@ border-right: 1px solid #e2e2e2;
     display: flex;
     align-items: center;
     width: 300px;
-    height: 330px;
+    height: 430px;
     background-color:#fff;
     box-shadow: 0 15px 45px rgba(0,0,0,0.25);
     overflow: hidden;
@@ -826,12 +826,15 @@ border-right: 1px solid #e2e2e2;
 .product-details {
     background-color: #427D9D;
     color: #ffffff;
+    padding: 10px, 20px;
     display: flex;
+    font-size: 18px;
+    text-align: left;
 }
 
 .description {
     flex: 1;
-    margin-right: 40px;
+    margin-right: 20px;
 }
 
 .reviews {
