--- a/style.css
+++ b/style.css
@@ -830,6 +830,9 @@ border-right: 1px solid #e2e2e2;
     display: flex;
     font-size: 18px;
     text-align: left;
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-top: 20px;
 }
 
 .description {
@@ -840,6 +843,8 @@ border-right: 1px solid #e2e2e2;
 .reviews {
     flex: 1;
     background-color: #427D9D;
+    margin-left: 40px;
+    margin-right: 40px;
 }
 
 .user-reviews {
@@ -847,18 +852,20 @@ border-right: 1px solid #e2e2e2;
     background-color: white;
     color: #000000;
     font-size: 16px;
+    
 }
 
 /* Estilos para el formulario de reseñas */
 #reviewForm {
     margin-top: 20px;
+    margin-right: 40px;
 }
 
 #userReview {
     width: 100%;
     height: 100px;
     resize: vertical; /* Permite redimensionar verticalmente */
-    margin-bottom: 10px;
+    margin-left: 20px;
 }
 
 #userReview:focus {
